# web-analyzer-wip

./: .gitignore  Cargo.toml  README.md
analysis/html/: Cargo.toml
analysis/html/src/: ast.rs  lib.rs
analysis/javascript/: Cargo.toml
analysis/javascript/src/: ast.rs  ty.rs
analysis/javascript/src/ty/: infer.rs
analysis/typescript/: Cargo.toml
analysis/typescript/src/: ast.rs  lib.rs
analysis/typescript/src/ty/: infer.rs  types.rs
analysis/vue/: Cargo.toml
analysis/vue-cli/: Cargo.toml
analysis/vue-cli/src/: main.rs  workspace.rs
analysis/vue/src/: app.rs  ast.rs  config.rs  database.rs  db.rs  debug.rs  definitions.rs  diagnostics.rs  lib.rs  model.rs  parse.rs  runtime.rs  syntax.rs  types.rs
analysis/vue/src/parse/: input.rs  language.rs  stable.rs
analysis/vue/src/types/: infer.rs  ty.rs
codegen/antlr/: Cargo.toml
codegen/antlr/grammars/: html.g  javascript.g  typescript.g  vue.g
codegen/antlr/src/: ast.rs  grammar.rs  import.rs  lib.rs  macros.rs  queries.rs  transform.rs
codegen/estree/: Cargo.toml
codegen/estree/contrib/: typescript.md
codegen/estree/src/: ast.rs  grammar.rs  lib.rs  macros.rs  scan.rs
grammar/html/: Cargo.toml
grammar/html/src/: ast.rs  grammar.rs  lexer.rs  lib.rs  scan.rs  syntax_kind.rs
grammar/javascript/: Cargo.toml
grammar/javascript/src/: ast.rs  generated.rs  grammar.rs  grammar_ext.rs  lexer.rs  lib.rs  samples.rs  scan.rs  syntax_kind.rs
grammar/typescript/: Cargo.toml
grammar/typescript/src/: ast.rs  grammar.rs  grammar_ext.rs  lexer.rs  lib.rs  syntax_kind.rs
grammar/vue/: Cargo.toml
grammar/vue/src/: ast.rs  grammar.rs  lib.rs  syntax_kind.rs
lang/estree/: Cargo.toml
lang/estree/src/: ast.rs  grammar.rs  lib.rs  scan.rs
lang/html/: Cargo.toml
lang/html/src/: ast.rs  grammar.rs  lexer.rs  lib.rs  scan.rs  syntax_kind.rs
lang/javascript/: Cargo.toml  TODO.md
lang/javascript/src/: ast.rs  generated.rs  grammar.rs  grammar_ext.rs  lexer.rs  lib.rs  samples.rs  scan.rs  syntax_kind.rs
lang/typescript/: Cargo.toml
lang/typescript/src/: lexer.rs  syntax_kind.rs
lang/vue/: Cargo.toml
lang/vue/src/: syntax_kind.rs
tests/: language_kinds.rs
utils/: Cargo.toml
utils/analysis/: Cargo.toml
utils/analysis/src/: arena.rs  ast.rs  change.rs  file.rs  interner.rs  lib.rs  line_index.rs  source.rs
utils/grammar/: Cargo.toml
utils/grammar/src/: ast.rs  lexer.rs  lib.rs  macros.rs  parser.rs  scan.rs  syntax_error.rs  syntax_kind.rs
utils/grammar/src/parser/: token_source.rs  tree_sink.rs
utils/grammar/src/syntax_kind/: language_kind.rs  meta.rs
utils/src/: ast.rs  grammar.rs  language_kind.rs  lexer.rs  lib.rs  location.rs  macros.rs  parser.rs  scan.rs  scanner.rs  syntax_kind.rs  token.rs
utils/src/grammar/: bitor.rs  builtin.rs  impls.rs  outcome.rs  predictive.rs  token_set.rs
utils/src/parser/: token_set.rs  token_source.rs  tree_sink.rs
utils/test/: Cargo.toml
utils/test/src/: lib.rs
