[package]
name = "html_analysis"
version = "0.1.0"
authors = ["Kevin Stenerson <developer@stenerson.me>"]
edition = "2018"

[dependencies]
code_analysis = { path = "../../utils/analysis", features = ["ast"] }
code_grammar = { path = "../../utils/grammar" }
html_grammar = { path = "../../grammar/html" }
salsa = "0.12.0"
