[package]
name = "javascript_analysis"
version = "0.1.0"
authors = ["Kevin Stenerson <developer@stenerson.me>"]
edition = "2018"

[features]
runtime = []

[dependencies]
code_analysis = { path = "../../utils/analysis", features = ["ast"] }
code_grammar = { path = "../../utils/grammar" }
javascript_grammar = { path = "../../grammar/javascript" }
salsa = "0.12.0"
unescape = "0.1.0"
