[package]
name = "typescript_analysis"
version = "0.1.0"
authors = ["Kevin Stenerson <developer@stenerson.me>"]
edition = "2018"

[dependencies]
code_analysis = { path = "../../utils/analysis", features = ["ast"] }
code_grammar = { path = "../../utils/grammar" }
typescript_grammar = { path = "../../grammar/typescript" }
salsa = "0.12.0"
unescape = "0.1.0"
