[package]
name = "vue_analyzer"
version = "0.1.0"
authors = ["Kevin Stenerson <developer@stenerson.me>"]
edition = "2018"

[[bin]]
name = "vue-analyzer"
path = "src/main.rs"

[dependencies]
vue_analysis = { path = "../vue", features = ["runtime"] }
clap = "2.33.0"
toml = "0.5.0"
serde_json = "1.0.39"

