[package]
name = "vue_analysis"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
edition = "2018"

[dependencies]
analysis_utils = { path = "../../utils/analysis" }
grammar_utils = { path = "../../utils/grammar" }
html_grammar = { path = "../../grammar/html" }
javascript_grammar = { path = "../../grammar/javascript" }
typescript_grammar = { path = "../../grammar/typescript" }
vue_grammar = { path = "../../grammar/vue" }
rustc-hash = "1.0.1"
salsa = "0.12.0"
unescape = "0.1.0"

[dev-dependencies]
test_utils = { path = "../../utils/test" }
