[package]
name = "code_analysis"
version = "0.1.0"
authors = ["Kevin Stenerson <developer@stenerson.me>"]
edition = "2018"

[features]
ast = ["code_grammar"]

[dependencies]
code_grammar = { path = "../grammar", optional = true }
parking_lot = "0.8.0"
relative-path = "0.4.0"
rowan = "0.5.0"
rustc-hash = "1.0.1"
salsa = "0.12.0"
superslice = "1.0.0"

[dev-dependencies]
proptest = "0.9.3"
